# CS161

cs161_delivery_v1/: LECTURE_MAP.md  chapter_04_randomized_algorithms.md
cs161_reader_v0_4/cs161_reader_v0_4/: README.md
cs161_reader_v0_4/cs161_reader_v0_4/chapters/: ch04_randomized_algorithms.md  (+2 more)
cs161_reader_v0_5/cs161_reader_v0_5/: README.md
cs161_reader_v0_6/cs161_reader_v0_6/: README.md
cs161_reader_v0_7/cs161_reader_v0_7/: README.md
cs161_reader_v0_8/cs161_reader_v0_8/: README.md
cs161_reader_v0_9/cs161_reader_v0_9/: README.md
cs161_reader_v1_0/cs161_reader_v1_0/: README.md  chapters.yaml  release.sh
cs161_reader_v1_1/cs161_reader_v1_1/: README.md  chapters.yaml  hook_registry.yaml  release.sh
cs161_reader_v1_2/cs161_reader_v1_2/: README.md  chapters.yaml
cs161_reader_v1_3/cs161_reader_v1_3/: README.md  chapters.yaml  hook_registry.yaml
cs161_reader_v1_4/cs161_reader_v1_4/: README.md  chapters.yaml
cs161_reader_v1_5/cs161_reader_v1_5/: README.md  chapters.yaml
cs161lab_v0_1/: MIGRATION.md  PROOF_PATTERNS.md  README.md  pyproject.toml
cs161lab_v0_1/cs161lab/: __init__.py  cli.py
cs161lab_v0_1/cs161lab/algorithms/: __init__.py  graphs.py  mincut.py  mst.py  sorting.py  sssp.py
cs161lab_v0_1/cs161lab/graphs/: directed.py
cs161lab_v0_1/cs161lab/legacy/: l1_MinCuts_Kargers.py
cs161lab_v0_1/tests/: test_sssp.py  test_topo.py
cs161lab_v0_2/: PROOF_PATTERNS.md  README.md
cs161lab_v0_2/cs161lab/: bench.py  cli.py
cs161lab_v0_2/cs161lab_v0_2/: pyproject.toml
cs161lab_v0_2/tests/: test_amortized.py  test_sssp.py  test_topo.py
(+143 files in other folders)
