[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs161lab"
version = "0.1.0"
description = "Executable CS161 algorithms lab: reference implementations + benchmarking + proof-pattern index."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
cs161lab = "cs161lab.cli:main"
